@@ -23,6 +23,9 @@ New in spot 2.11.2.dev  (not yet released)
     (e.g., when the State: header declare many more states than the body
     of the file).  It now warns about those.
 
+  - 'autfilt -c ...' should display a match count even in present of
+    parse errors.
+
 New in spot 2.11.2  (2022-10-26)
 
   Command-line tools:
